--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 server.port= 8081
+
+#spring.security.user.name = wwl
+#spring.security.user.password = wwl
